fix: eliminación de scroll horizontal en mobile con overflow-x:hidden

--- a/css/webflow-main.css
+++ b/css/webflow-main.css
@@ -4797,6 +4797,12 @@ figure {
 }
 
 @media screen and (max-width: 479px) {
+
+  html,
+  body {
+    overflow-x: hidden;
+  }
+
   body {
     --_typography---body-m--font-size: 1rem;
     --_typography---h1-l--font-size: 2.75rem;
